# realtime-feature-store

./: .gitignore  README.md  docker-compose.yml
api/: README.md  pyproject.toml
api/app/: config.py  database.py  kafka_client.py  logging_config.py  main.py  redis_client.py
api/app/models/: __init__.py  event.py  feature.py
api/app/repositories/: feature_repository.py  quality_log_repository.py
api/app/routers/: events.py  features.py  health.py  recommendations.py
api/app/schemas/: event.py  feature.py  recommendation.py
api/app/services/: event_collector.py  event_validation.py  feature_store.py  metrics_service.py  recommendation_service.py
api/tests/: test_event_collector.py  test_event_validation.py  test_feature_api.py  test_health.py  test_kafka_publish.py  test_recommendation_api.py
db/: init.sql
docs/: api_contract.md  architecture.md  baseline_experiment_result.md  demo_scenario.md  duplicate_ratio_experiment_result.md  e2e_smoke_test.md  event_schema.md  experiment_plan.md  feature_definitions.md  invalid_ratio_experiment_result.md  late_ratio_experiment_result.md  operational_tradeoffs.md  processing_policy.md  step_plan.md  testing.md  throughput_experiment_result.md  troubleshooting.md
event-generator/: README.md  pyproject.toml
event-generator/generator/: __init__.py  catalog.py  config.py  event_factory.py  main.py  models.py  scenarios.py  sender.py
event-generator/tests/: test_event_factory.py  test_scenarios.py  test_sender.py
flink-jobs/: build.gradle  settings.gradle
scripts/: create-topics.sh  reset-local.sh  run-api.sh  (+3 more)
(+29 files in other folders)
