[project]
name = "realtime-feature-store-api"
version = "0.1.0"
description = "FastAPI layer for the realtime recommendation feature store"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "confluent-kafka>=2.4.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

